# SON-GOKU-Taskonomy-Lambda-Cloud

./: LAMBDA_SPIN_UP_GUIDE.md  README.md  prepare_pascal_context_data.py  prepare_taskonomy_data.py  pyproject.toml  requirements.txt  run_medium_graph_ablations.sh  run_synthetic_memory_isolation.sh
.ipynb_checkpoints/: pyproject-checkpoint.toml
compressed/: rgb__taskonomy__allensville.tar.aria2
docs/: PASCAL_CONTEXT_TUTORIAL.md
examples/: minimal_usage.py
pascal-context_eval/: runner.py
pascal-context_eval/datasets/: __init__.py  pascal_context.py
pascal-context_eval/methods/: __init__.py
pascal-context_eval/models/: __init__.py
pascal-context_eval/utils/: __init__.py
pascal_context_eval/: __init__.py
son_goku/: __init__.py  coloring.py  engine.py  graph.py  interfaces.py  scheduler.py  utils.py
son_goku.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
son_goku/affinity/: affinity.py  scheduler_affinity.py
son_goku/approx/: coloring.py  d5_cli.py  graph_build.py  oracles.py  scheduler_instrumented.py
taskonomy_eval/: .runner.py.swp  ablate_cli.py  affinity_cli.py  check_domains_cli.py  fast_prepare_cli.py  graph_ablate_cli.py  memory_cli.py  overhead_curve_cli.py  rebuttal_cli.py  runner.py  time_quality_cli.py
taskonomy_eval/benchmarks/: memory_benchmark.py
taskonomy_eval/datasets/: synthetic_taskonomy.py  taskonomy.py
taskonomy_eval/methods/: .gradnorm_method.py.swp  __init__.py  adatask_method.py  base.py  cagrad_method.py  fairgrad_method.py  famo_method.py  (+14 more)
taskonomy_son_goku_eval/: run_example.sh
tests/: test_graph_rules.py
(+49 files in other folders)
