[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "son-goku"
version = "0.1.0"
description = "SON-GOKU: Interference-aware graph-coloring scheduler for Multi-Task Learning (PyTorch)"
authors = [{name="Your Name"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "torch",
    "numpy<2",
    "Pillow",
]
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
